@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.25 2004/04/27 23:23:03 recht Exp $
+# $NetBSD: Makefile,v 1.26 2004/05/28 22:31:50 xtraeme Exp $
 #
 
-DISTNAME=	jikes-1.20
+DISTNAME=	jikes-1.21
 CATEGORIES=	lang java
-MASTER_SITES=	http://oss.software.ibm.com/pub/jikes/1.20/
+MASTER_SITES=	http://oss.software.ibm.com/pub/jikes/1.21/
 EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	tech-pkg@NetBSD.org
